# robot-assistant-chatbot

./: .gitignore  Dockerfile  README.md  continuous_wf_test.py  gradio_app.py  main.py  pyproject.toml  req.txt  requirements.txt  scraped_docs.json  scraped_docs.txt  streamlit_app.py  testWF.py  test_workflow.py  testllm.py  vectordb_generation.py
data/: adder.py  cleaned_emines_docs.json  emines_docs.json  emines_docs.txt  locations.json
data/Navigation history/: history.json
hub/: main.py
memories/: 040c9b7f-22aa-477f-9538-ba2785203650.json  22670cc6-4186-468a-8d03-618ccef31bc8.json  2e28bf9d-2a96-46df-b288-1b45dd124089.json  7a5b03fc-934c-4904-a5a9-bdbaa073187b.json  8aefff6c-b909-4983-97cb-5f7d2d25d918.json  90af244e-1a8c-4342-b181-a29920ffdce7.json  9bdf247b-456f-452f-9cfc-a20fc43624fc.json  9e307af0-4f67-4f9c-a45a-5f28913f7e95.json  c2bb1946-ebd3-43e3-b432-ac79ee95eefe.json  cf34cd5b-8bef-41bf-a025-eed434cd2954.json  dd6ff8d6-f479-4a17-84e7-86e3ce87e40c.json  e3ba6217-9b2e-4d4e-b10a-bdc8331e341a.json  ea72870d-0640-4af1-b43c-e7414b3cfb76.json
src/: models.py  scrapping.py  vectordb_generation.py  workflow.py
src/components/: voice_assistant.py  voice_bridge.py
src/robot_assistant_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/services/: llm.py  navigation.py  rag.py  stt.py  tts.py
src/ui/: app.py  app_desktop.py  app_mobile.py  styles.py  styles_mobile.py
vector_db/: index.faiss  index.pkl
