[project]
name = "robot-assistant-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "assemblyai>=0.52.0",
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "langgraph>=1.0.4",
    "numpy>=2.3.5",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "requests>=2.32.5",
]
